<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".presentation.ui.keyboard.EnterCardNumberFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_large"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:elevation="26dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.chaos.view.PinView
                android:id="@+id/card_number_editText"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:cursorVisible="true"
                android:inputType="number"
                app:hideLineWhenFilled="false"
                app:itemCount="8"
                app:itemHeight="@dimen/pin_view_item_height"
                app:itemRadius="@dimen/pin_view_item_radius"
                app:itemSpacing="0dp"
                app:itemWidth="@dimen/pin_view_item_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineWidth="@dimen/pin_view_line_width"
                app:viewType="rectangle" />

            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/antic"
                android:text="@string/text_info"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/card_number_editText"
                app:layout_constraintStart_toStartOf="@+id/card_number_editText"
                app:layout_constraintTop_toBottomOf="@+id/card_number_editText" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/card_number_editText"
                app:layout_constraintStart_toStartOf="@id/card_number_editText"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".5" />

                    <TextView
                        android:id="@+id/text1"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_scheme_network"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_scheme"
                        style="@style/TextMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_default_text"
                        app:layout_constraintStart_toStartOf="@id/text1"
                        app:layout_constraintTop_toBottomOf="@id/text1"
                        tools:text="Mastercard" />

                    <TextView
                        android:id="@+id/text2"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_type"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_type"
                        style="@style/TextMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_default_text"
                        app:layout_constraintStart_toStartOf="@id/text2"
                        app:layout_constraintTop_toBottomOf="@id/text2"
                        tools:text="Credit" />

                    <TextView
                        android:id="@+id/text3"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_bank"
                        app:layout_constraintStart_toStartOf="@id/text1"
                        app:layout_constraintTop_toBottomOf="@id/text_scheme" />

                    <TextView
                        android:id="@+id/text_bank"
                        style="@style/TextMain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/text_default_text"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@id/text3"
                        app:layout_constraintTop_toBottomOf="@id/text3"
                        tools:text="First Bank" />


                    <TextView
                        android:id="@+id/text4"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_prepaid"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/text_type" />

                    <TextView
                        android:id="@+id/text_prepaid"
                        style="@style/TextMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_default_text"
                        app:layout_constraintStart_toStartOf="@id/text4"
                        app:layout_constraintTop_toBottomOf="@id/text4"
                        tools:text="Yes" />

                    <TextView
                        android:id="@+id/text5"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_country"
                        app:layout_constraintStart_toStartOf="@id/text1"
                        app:layout_constraintTop_toBottomOf="@+id/text_bank" />

                    <TextView
                        android:id="@+id/text_country"
                        style="@style/TextMain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/text_default_text"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@id/text5"
                        app:layout_constraintTop_toBottomOf="@id/text5"
                        tools:text="France" />

                    <TextView
                        android:id="@+id/text6"
                        style="@style/TextSub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_card_number_length"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/text_prepaid" />

                    <TextView
                        android:id="@+id/text_card_number_length"
                        style="@style/TextMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_default_text"
                        app:layout_constraintStart_toStartOf="@id/text6"
                        app:layout_constraintTop_toBottomOf="@id/text6"
                        tools:text="16" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/check_card_button"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:fontFamily="@font/antic"
        android:gravity="center"
        android:text="@string/text_check"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:backgroundTint="@color/design_default_color_primary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>